<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_notification"
        android:title="@string/notification"
		android:summary="@string/notification_desc" />

	<ListPreference
        android:dependency="pref_notification"
        android:defaultValue="0"
        android:entries="@array/pref_hours_titles"
        android:entryValues="@array/pref_hours_values"
        android:summary="%s"
        android:key="pref_hours"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/mealHours" />

    <Preference android:title="@string/fetchMeals" android:key="pref_update"></Preference>

    <PreferenceCategory android:title="@string/appInfo">

        <Preference android:title="@string/aboutApp" android:key="pref_about"></Preference>
        <Preference android:title="adnagu.com" android:key="pref_adnagu">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://adnagu.com" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
