<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        card_view:cardCornerRadius="24dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardPreventCornerOverlap="false"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mealOfToday"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:text="@string/lunch"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:rotation="270"/>

                <TextView
                    android:id="@+id/meal_lunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:text="Kuru Fasülye"
                    android:textSize="14dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/meal_dinner_layout">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="44dp"
                        android:layout_height="match_parent"
                        android:text="@string/dinner"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:textColor="@color/colorAccent"
                        android:gravity="center"
                        android:rotation="270"/>

                    <TextView
                        android:id="@+id/meal_dinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="40dp"
                        android:text="Et Sote"
                        android:textSize="14dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>